# ennam-django-apidog

./: .gitignore  .pre-commit-config.yaml  APIDOG_INTEGRATION_FIX.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CREDENTIALS_SETUP.md  DOCKER_DEPLOYMENT.md  ENVIRONMENT_VARIABLES_FINAL_SOLUTION.md  ENVIRONMENT_VARIABLES_FIX.md  ENVIRONMENT_VARIABLES_GUIDE.md  FINAL_STATUS_REPORT.md  LICENSE  MANIFEST.in  MANUAL_PUBLISH.md  PUBLISH.md  PUBLISHING_GUIDE.md  PUBLISH_TROUBLESHOOTING.md  PYPI_READY.txt  QUICK_REFERENCE.md  README.md  RELEASE.md  SESSION_SUMMARY.md  TESTING.md  TESTING_INTEGRATION.md  TESTING_SUMMARY.md  TOKEN_VERIFICATION_TEST.md  pyproject.toml  pyproject.toml (edit)  pytest.ini
.claude/: settings.local.json
.github/workflows/: publish.yml  test.yml
docs/: GUIDE.md
src/ennam_django_apidog/: __init__.py  apps.py  schema_hooks.py  settings.py
src/ennam_django_apidog/management/commands/: apidog.py
src/ennam_django_apidog/templates/: .gitignore.apidog  Makefile.apidog  docker-compose.apidog.yml  environments.json
tests/: __init__.py  conftest.py  settings.py  test_commands.py  test_commands_errors.py  test_commands_http.py  test_schema_hooks.py  test_settings.py  urls.py
